# pip-cam

./: .gitignore  LICENSE  README.md  inno-setup-action.iss  main.old.py  main.py  main_linux.py  pip_config.json  pyproject.toml
.github/workflows/: build-windows.yml
classes/: launcher.py  pip_camera_widget.py  shortcut_signals.py
classes/core/: audio_analyzer.py  config_manager.py  device_manager.py  hotkey_manager.py  video_processor.py
classes/ui/: filter_dialogs.py  floating_toolbar.py
classes/views/: launcher.py  pip_widget.py
docs/: config-uv-commands.md  gerando-versao.md  sobre-os-testes.md
tests/: conftest.py  test_audio_analyzer.py  test_config_manager.py  test_device_manager.py  test_filter_dialogs.py  test_floating_toolbar.py  test_functions.py  test_shortcut_signals.py  test_video_processor.py
utils/: functions.py
