[project]
name = "pip-cam"
version = "0.1.0"
description = "Um widget de câmera flutuante, leve e customizável desenvolvido em Python e PyQt6."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "keyboard>=0.13.5",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.92",
    "pygrabber>=0.2",
    "pyqt6>=6.11.0",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = ["poethepoet>=0.44.0", "pyinstaller>=6.19.0"]

[tool.poe.tasks]
play = "uv run main.py"
build = "uv run pyinstaller --noconfirm --onefile --windowed --icon=\"assets/pipcam_icon.ico\" --name=\"pipcamwin\" --add-data=\"classes;classes/\" --add-data=\"utils;utils/\" --add-data=\"assets;assets/\" main.py"
